<resources>
    <string name="app_name">Duckbanglow</string>
    <string name="app_title">Duckbanglow</string>
    <string name="version_text">Version 1.0.0</string>
    <string name="copyright_text">Copyright © 2021 Duckbanglow</string>
    <string name="signinfor_text">SIGN UP FOR AN ACCOUNT?</string>
    <string name="signin_btn_text">S I G N  I N</string>
    <string name="welcome_text">Welcome to Duckbanglow</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="skip">S K I P</string>
    <string name="password">PASSWORD</string>
    <string name="phonenumber">PHONE NUMBER</string>
    <string name="user_name">Username</string>
    <string name="user_email">Email</string>
    <string name="register_with_facebook">REGISTER WITH FACEBOOK</string>
    <string name="register">REGISTER</string>
    <string name="gender">Gender</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="nid">NID Number</string>
    <string name="address">Address</string>
    <string name="shortdescription">Short Description</string>
    <string name="pass_word">Password</string>
    <string name="re_type_password">Re-type Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="verify_your_number">Verify Your Number</string>
    <string name="please_enter_your_mobile_number_to_receive_a_verification_code_carrier_rates_may_apply">Please enter your mobile number to receive a verification code. Carrier rates may apply</string>
    <string name="_61">+61</string>
    <string name="phone_number">Phone Number</string>
    <string name="continuetxt">CONTINUE</string>
    <string name="otp_has_been_sent">OTP has been sent to you on your mobile phone. Please enter it below</string>
    <string name="verify">VERIFY</string>
    <string name="play">Play</string>
    <string name="contact">Contact</string>
    <string name="about_me">About Me</string>
    <string name="my_desc">Doing at the sweet spot between aesthetics and elegance to give life to your brand.My opinion belong to nobody but myself.</string>
    <string name="skills">Skills</string>
    <string name="select_image">Select Image</string>
    <string name="submit">Submit</string>

    <string-array name="items_class">
        <item>Class 1</item>
        <item>Class 2</item>
        <item>Class 3</item>
        <item>Class 4</item>
    </string-array>

</resources>