<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    android:paddingBottom="40dp"
    tools:context=".views.ui.SignInActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textAlignment="center"
        android:lineSpacingExtra="5dp"
        android:text="@string/welcome_text"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo">

    </TextView>

    <TextView
        android:id="@+id/tv_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/sign_in_to_continue"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title">

    </TextView>

    <Button
        android:visibility="gone"
        android:id="@+id/btn_skip"
        android:text="@string/skip"
        android:textColor="@color/white"
        android:paddingRight="5dp"
        android:gravity="center"
        android:drawableRight="@drawable/right_arrow"
        android:background="@drawable/signin_btn_design"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_continue"
        android:layout_marginTop="10dp"
        android:layout_width="100dp"
        android:layout_height="40dp">
    </Button>

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phonenumber"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp"
        android:gravity="start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/et_username">

    </TextView>


    <EditText
        android:id="@+id/et_username"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/colorPrimary"
        android:inputType="number"
        android:layout_marginBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </EditText>

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp"
        android:gravity="start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/et_password">

    </TextView>

    
    <EditText
        android:id="@+id/et_password"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/colorPrimary"
        android:inputType="textPassword"
        android:layout_marginBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </EditText>

    <Button
        android:id="@+id/btn_signin"
        android:text="@string/signin_btn_text"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:background="@drawable/signin_btn_design"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_signup_for_anaccount"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="40dp">

    </Button>


    <TextView
        android:id="@+id/tv_signup_for_anaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signinfor_text"
        android:textColor="@color/colorPrimary"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </TextView>
</androidx.constraintlayout.widget.ConstraintLayout>