<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="40dp"
    tools:context=".views.ui.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <RelativeLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/et_fullname"
                            android:backgroundTint="@color/colorPrimary"
                            android:textColor="@color/colorPrimary"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/full_name"
                            android:inputType="text"
                            android:maxLines="1"
                            android:singleLine="true" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/et_username"
                            android:backgroundTint="@color/colorPrimary"
                            android:textColor="@color/colorPrimary"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/user_email"
                            android:inputType="text"
                            android:maxLines="1"
                            android:singleLine="true" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/et_phone"
                            android:backgroundTint="@color/colorPrimary"
                            android:textColor="@color/colorPrimary"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/phone"
                            android:inputType="number"
                            android:maxLines="1"
                            android:singleLine="true" />

                    </com.google.android.material.textfield.TextInputLayout>



                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/et_nid"
                            android:backgroundTint="@color/colorPrimary"
                            android:textColor="@color/colorPrimary"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/nid"
                            android:inputType="text"
                            android:maxLines="1"
                            android:singleLine="true" />

                    </com.google.android.material.textfield.TextInputLayout>



                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/et_password"
                            android:backgroundTint="@color/colorPrimary"
                            android:textColor="@color/colorPrimary"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/pass_word"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:singleLine="true" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/et_address"
                            android:backgroundTint="@color/colorPrimary"
                            android:textColor="@color/colorPrimary"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/address"
                            android:inputType="text"
                            android:maxLines="1"
                            android:singleLine="true" />

                    </com.google.android.material.textfield.TextInputLayout>



                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/et_shortdescription"
                            android:backgroundTint="@color/colorPrimary"
                            android:textColor="@color/colorPrimary"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/shortdescription"
                            android:inputType="text"
                            android:maxLines="10"
                            android:singleLine="true" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/gender"
                            android:textColor="@color/black" />

                        <RadioGroup
                            android:id="@+id/gender"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <androidx.appcompat.widget.AppCompatRadioButton
                                android:id="@+id/radio_female"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Female"
                                android:checked="true"
                                android:textColor="@color/black" />


                            <androidx.appcompat.widget.AppCompatRadioButton
                                android:id="@+id/radio_male"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Male"
                                android:textColor="@color/black" />

                        </RadioGroup>

                    </LinearLayout>

                    <Button
                        android:id="@+id/btn_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/signin_btn_design"
                        android:text="@string/register"
                        android:textColor="@android:color/white" />


                    <Button
                        android:visibility="gone"
                        android:id="@+id/btn_register_with_facebook"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/signin_btn_design"
                        android:text="@string/register_with_facebook"
                        android:textColor="@android:color/white" />

                </LinearLayout>

            </RelativeLayout>

        </ScrollView>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>